changed index on 2nd table

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e2981682",
+   "id": "d4145447",
    "metadata": {
     "scrolled": true
    },
@@ -1211,8 +1211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "fce589e0",
+   "execution_count": 12,
+   "id": "2b2c1efa",
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1428,7 @@
        "[12024 rows x 9 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5b49b545",
+   "id": "b77ec4bf",
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "53a0abfc",
    "metadata": {},
    "outputs": [
@@ -1497,149 +1497,6 @@
       "KNA is not a valid country\n",
       "TWN is not a valid country\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>GDP</th>\n",
-       "      <th>Population Density</th>\n",
-       "      <th>Urbanization</th>\n",
-       "      <th>Unemployment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ALB</td>\n",
-       "      <td>15059.0</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>61.2</td>\n",
-       "      <td>12.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>DZA</td>\n",
-       "      <td>173757.0</td>\n",
-       "      <td>18.4</td>\n",
-       "      <td>73.2</td>\n",
-       "      <td>11.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ARG</td>\n",
-       "      <td>518475.0</td>\n",
-       "      <td>16.5</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>10.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ARM</td>\n",
-       "      <td>12433.0</td>\n",
-       "      <td>104.1</td>\n",
-       "      <td>63.2</td>\n",
-       "      <td>16.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AUS</td>\n",
-       "      <td>1453871.0</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>86.1</td>\n",
-       "      <td>5.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>USA</td>\n",
-       "      <td>20580223.0</td>\n",
-       "      <td>36.2</td>\n",
-       "      <td>82.5</td>\n",
-       "      <td>3.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>URY</td>\n",
-       "      <td>59597.0</td>\n",
-       "      <td>19.8</td>\n",
-       "      <td>95.4</td>\n",
-       "      <td>8.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>VEN</td>\n",
-       "      <td>208338.0</td>\n",
-       "      <td>32.2</td>\n",
-       "      <td>88.2</td>\n",
-       "      <td>9.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>VNM</td>\n",
-       "      <td>244901.0</td>\n",
-       "      <td>313.9</td>\n",
-       "      <td>36.6</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>ZWE</td>\n",
-       "      <td>24312.0</td>\n",
-       "      <td>38.4</td>\n",
-       "      <td>32.2</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>104 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Country         GDP  Population Density  Urbanization  Unemployment\n",
-       "0       ALB     15059.0               105.0          61.2          12.8\n",
-       "1       DZA    173757.0                18.4          73.2          11.5\n",
-       "2       ARG    518475.0                16.5          92.0          10.4\n",
-       "3       ARM     12433.0               104.1          63.2          16.6\n",
-       "4       AUS   1453871.0                 3.3          86.1           5.3\n",
-       "..      ...         ...                 ...           ...           ...\n",
-       "99      USA  20580223.0                36.2          82.5           3.9\n",
-       "100     URY     59597.0                19.8          95.4           8.8\n",
-       "101     VEN    208338.0                32.2          88.2           9.4\n",
-       "102     VNM    244901.0               313.9          36.6           2.0\n",
-       "103     ZWE     24312.0                38.4          32.2           5.0\n",
-       "\n",
-       "[104 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1654,7 +1511,7 @@
     "        countries_df = pd.concat([countries_df, new_country_df], ignore_index = True, axis = 0)\n",
     "    except (IndexError, KeyError):\n",
     "        print(f'{nat} is not a valid country')\n",
-    "countries_df"
+    "countries_df.set_index('Country', inplace=True)"
    ]
   },
   {
