--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "abda67a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import sqlalchemy\n",
+    "from sqlalchemy import create_engine\n",
     "import requests\n",
     "from config import ninja_api\n",
-    "import json"
+    "import json\n",
+    "import psycopg2"
    ]
   },
   {
@@ -955,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d4145447",
+   "id": "efd9a7f7",
    "metadata": {
     "scrolled": true
    },
@@ -1211,8 +1212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "2b2c1efa",
+   "execution_count": 15,
+   "id": "711e3162",
    "metadata": {},
    "outputs": [
     {
@@ -1245,6 +1246,18 @@
        "      <th>total_boosters</th>\n",
        "      <th>perc_vaccinated</th>\n",
        "      <th>perc_fully_vaccinated</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1387,6 +1400,7 @@
       ],
       "text/plain": [
        "      iso_code continent  location        date  population  \\\n",
+       "id                                                           \n",
        "0          ALB    Europe   Albania  2021-11-03   2872934.0   \n",
        "1          ALB    Europe   Albania  2021-11-06   2872934.0   \n",
        "2          ALB    Europe   Albania  2021-11-07   2872934.0   \n",
@@ -1400,6 +1414,7 @@
        "12023      ZWE    Africa  Zimbabwe  2022-02-22  15092171.0   \n",
        "\n",
        "       total_vaccinations  total_boosters  perc_vaccinated  \\\n",
+       "id                                                           \n",
        "0               1926604.0          2799.0         0.356841   \n",
        "1               1944676.0          8230.0         0.359071   \n",
        "2               1947148.0          8815.0         0.359374   \n",
@@ -1413,6 +1428,7 @@
        "12023           7836325.0        114691.0         0.287892   \n",
        "\n",
        "       perc_fully_vaccinated  \n",
+       "id                            \n",
        "0                   0.312790  \n",
        "1                   0.314960  \n",
        "2                   0.315314  \n",
@@ -1428,7 +1444,7 @@
        "[12024 rows x 9 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,13 +1452,14 @@
    "source": [
     "final_df = perc_df.copy()\n",
     "final_df.drop(['people_vaccinated', 'people_fully_vaccinated'], axis=1, inplace=True)\n",
+    "final_df.index.names = ['id']\n",
     "final_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b77ec4bf",
+   "execution_count": 16,
+   "id": "f4a5c4ef",
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1481,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "53a0abfc",
    "metadata": {},
    "outputs": [
@@ -1484,18 +1501,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AND is not a valid country\n",
-      "AIA is not a valid country\n",
-      "FRO is not a valid country\n",
-      "GIB is not a valid country\n",
-      "GRD is not a valid country\n",
-      "GGY is not a valid country\n",
-      "IMN is not a valid country\n",
-      "JEY is not a valid country\n",
-      "OWID_KOS is not a valid country\n",
-      "MCO is not a valid country\n",
-      "KNA is not a valid country\n",
-      "TWN is not a valid country\n"
+      "AND is not a valid country for the API\n",
+      "AIA is not a valid country for the API\n",
+      "FRO is not a valid country for the API\n",
+      "GIB is not a valid country for the API\n",
+      "GRD is not a valid country for the API\n",
+      "GGY is not a valid country for the API\n",
+      "IMN is not a valid country for the API\n",
+      "JEY is not a valid country for the API\n",
+      "OWID_KOS is not a valid country for the API\n",
+      "MCO is not a valid country for the API\n",
+      "KNA is not a valid country for the API\n"
      ]
     }
    ],
@@ -1510,17 +1526,70 @@
     "                                       'Unemployment': [response[0]['unemployment']]})\n",
     "        countries_df = pd.concat([countries_df, new_country_df], ignore_index = True, axis = 0)\n",
     "    except (IndexError, KeyError):\n",
-    "        print(f'{nat} is not a valid country')\n",
-    "countries_df.set_index('Country', inplace=True)"
+    "        print(f'{nat} is not a valid country for the API')\n",
+    "countries_df.set_index('Country', inplace=True)\n",
+    "countries_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f31a87f2",
+   "execution_count": 36,
+   "id": "197655bd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "conn_string = 'postgres:postgres@localhost:5432/vaccinations_db'\n",
+    "engine = create_engine(f'postgresql://{conn_string}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "db190510",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\wawil\\AppData\\Local\\Temp/ipykernel_40164/4162273999.py:1: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
+      "  engine.table_names()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['stats', 'vaccinations']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine.table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "0749ccad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.to_sql(name='vaccinations', con = engine, if_exists='replace', index = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "90e95bd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries_df.to_sql(name='stats', con = engine, if_exists = 'replace', index = True)"
+   ]
   }
  ],
  "metadata": {
