--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -1941,7 +1941,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\wawil\\AppData\\Local\\Temp/ipykernel_13408/4162273999.py:1: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
+      "/var/folders/s6/18mn8g3s4mxcv3mpc6q7xwt00000gn/T/ipykernel_13885/4162273999.py:1: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
       "  engine.table_names()\n"
      ]
     },
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "8e77cff3",
    "metadata": {
     "scrolled": false
@@ -2282,7 +2282,7 @@
        "[11719 rows x 14 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "e36be8e9",
    "metadata": {
     "scrolled": true
@@ -3151,7 +3151,7 @@
        "11718           5.0     1610.901440  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3163,7 +3163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "867d99e5",
    "metadata": {},
    "outputs": [
@@ -3185,7 +3185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "355266c8",
    "metadata": {},
    "outputs": [
@@ -3475,7 +3475,7 @@
        "[104 rows x 14 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3491,7 +3491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "82575111",
    "metadata": {},
    "outputs": [
@@ -3517,7 +3517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "bc9a9f77",
    "metadata": {},
    "outputs": [
