Fixed typo in the comments

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -1464,7 +1464,7 @@
    ],
    "source": [
     "final_df = perc_df.copy()\n",
-    "#Dropping the columns with the total number of people vaccinated/fully vaccinated due to redundeny\n",
+    "#Dropping the columns with the total number of people vaccinated/fully vaccinated due to redundency\n",
     "final_df.drop(['people_vaccinated', 'people_fully_vaccinated'], axis=1, inplace=True)\n",
     "final_df.index.names = ['id']\n",
     "final_df"
